force-app/main/default/objects/Order/fields/NotCancellable__c.field-meta.xml
<CustomField>
    <fullName>NotCancellable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicante una pratica non più annullabile</description>
    <label>Non Annullabile?</label>
    <type>Checkbox</type>
</CustomField>