force-app/main/default/objects/Order/fields/NotRegisteredMeterCase__c.field-meta.xml
<CustomField>
    <fullName>NotRegisteredMeterCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag che permette di segnalare che bisogna innescare il Case di Cambio Contatore non registrato</description>
    <label>Cambio Contatore Non Registrato</label>
    <type>Checkbox</type>
</CustomField>