force-app/main/default/objects/Order/fields/NotResidentDomesticHousingUnit__c.field-meta.xml
<CustomField>
    <fullName>NotResidentDomesticHousingUnit__c</fullName>
    <label>Unità abitative domestico non residente</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>