force-app/main/default/objects/Order/fields/OfferCode32__c.field-meta.xml
<CustomField>
    <fullName>OfferCode32__c</fullName>
    <label>Codice Offerta 32</label>
    <length>32</length>
    <type>Text</type>
</CustomField>