force-app/main/default/objects/Order/fields/OfferType__c.field-meta.xml
<CustomField>
    <fullName>OfferType__c</fullName>
    <label>Tipologia Offerta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OfferType</valueSetName>
    </valueSet>
</CustomField>