force-app/main/default/objects/Order/fields/OnerousUnreviewableStartDate__c.field-meta.xml
<CustomField>
    <fullName>OnerousUnreviewableStartDate__c</fullName>
    <label>Inizio Periodo Non Ravvedibile</label>
    <type>Date</type>
</CustomField>