force-app/main/default/objects/Order/fields/OneshotCustomer__c.field-meta.xml
<CustomField>
    <fullName>OneshotCustomer__c</fullName>
    <description>Campo formula da utilizzare come merge field dei template Email oneshot.</description>
    <formula>IF(Account.RecordType.Name = &apos;Residenziale&apos;, Account.FirstName__c &amp; &apos; &apos; &amp; Account.LastName__c, &apos;Cliente&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente Oneshot</label>
    <type>Text</type>
</CustomField>