force-app/main/default/objects/Order/fields/OperationCode__c.field-meta.xml
<CustomField>
    <fullName>OperationCode__c</fullName>
    <label>Codice Operazione</label>
    <length>7</length>
    <type>Text</type>
</CustomField>