force-app/main/default/objects/Order/fields/OperationGroup__c.field-meta.xml
<CustomField>
    <fullName>OperationGroup__c</fullName>
    <label>Gruppo Intervento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OperationGroup</valueSetName>
    </valueSet>
</CustomField>