force-app/main/default/objects/Order/fields/OrderODV__c.field-meta.xml
<CustomField>
    <fullName>OrderODV__c</fullName>
    <label>Ordine ODV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>