force-app/main/default/objects/Order/fields/OrderReference__c.field-meta.xml
<CustomField>
    <fullName>OrderReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>campo utilizzato per referenziare l&apos;ordine in corso durante la vendita singola di un VAS</description>
    <label>Ordine di riferimento</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (Ordine di riferimento)</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>