force-app/main/default/objects/Order/fields/OutgoingCreditCheckResult__c.field-meta.xml
<CustomField>
    <fullName>OutgoingCreditCheckResult__c</fullName>
    <label>Esito Credit Check Uscente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>