force-app/main/default/objects/Order/fields/ParentOrder__c.field-meta.xml
<CustomField>
    <fullName>ParentOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione verso l&apos;order dossier</description>
    <label>Order Padre</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>