force-app/main/default/objects/Order/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>10</length>
    <type>Text</type>
</CustomField>