force-app/main/default/objects/Order/fields/PaySewer__c.field-meta.xml
<CustomField>
    <fullName>PaySewer__c</fullName>
    <label>Paga Fognatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No - Esente</fullName>
            </value>
            <value>
                <fullName>Si - Paga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>