force-app/main/default/objects/Order/fields/PhaseStory__c.field-meta.xml
<CustomField>
    <fullName>PhaseStory__c</fullName>
    <label>PhaseStory</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>