force-app/main/default/objects/Order/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>Recapito Telefonico</label>
    <type>Phone</type>
</CustomField>