force-app/main/default/objects/Order/fields/PowerAvailable__c.field-meta.xml
<CustomField>
    <fullName>PowerAvailable__c</fullName>
    <description>Indica la potenza disponible dall&apos;impianto</description>
    <label>Potenza Disponible</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>