force-app/main/default/objects/Order/fields/PowerCommitted__c.field-meta.xml
<CustomField>
    <fullName>PowerCommitted__c</fullName>
    <description>Indica la potenza impegnata dell&apos;impianto</description>
    <label>Potenza Impegnata</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>