force-app/main/default/objects/Order/fields/PowerFlow__c.field-meta.xml
<CustomField>
    <fullName>PowerFlow__c</fullName>
    <label>Potenza/Portata</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>