force-app/main/default/objects/Order/fields/PowerQuote__c.field-meta.xml
<CustomField>
    <fullName>PowerQuote__c</fullName>
    <label>Quote Potenza</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>