force-app/main/default/objects/Order/fields/PowerRequested__c.field-meta.xml
<CustomField>
    <fullName>PowerRequested__c</fullName>
    <label>Potenza Richiesta</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>