force-app/main/default/objects/Order/fields/PraxidiaAccuracyandCompleteness__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaAccuracyandCompleteness__c</fullName>
    <label>Precisione e Completezza Praxidia</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>