force-app/main/default/objects/Order/fields/PraxidiaDateOutcome__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaDateOutcome__c</fullName>
    <label>Data esito Praxidia</label>
    <type>Date</type>
</CustomField>