force-app/main/default/objects/Order/fields/PraxidiaNote__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaNote__c</fullName>
    <label>Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>