force-app/main/default/objects/Order/fields/PraxidiaOverrallSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaOverrallSatisfaction__c</fullName>
    <label>Soddisfazione Complessiva</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>