force-app/main/default/objects/Order/fields/PraxidiaSatisfactionRequired__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaSatisfactionRequired__c</fullName>
    <label>Soddisfazione richiesta scritta Praxidia</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>