force-app/main/default/objects/Order/fields/PraxidiaVerbatim__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaVerbatim__c</fullName>
    <label>Verbatim Praxidia</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>