force-app/main/default/objects/Order/fields/PraxidiaWaitValue__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaWaitValue__c</fullName>
    <label>Attesa</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>