force-app/main/default/objects/Order/fields/PrecheckReasonSII__c.field-meta.xml
<CustomField>
    <fullName>PrecheckReasonSII__c</fullName>
    <label>Causale Precheck al SII</label>
    <length>255</length>
    <type>Text</type>
</CustomField>