force-app/main/default/objects/Order/fields/PrecheckResultSII__c.field-meta.xml
<CustomField>
    <fullName>PrecheckResultSII__c</fullName>
    <label>Esito Precheck al SII</label>
    <length>20</length>
    <type>Text</type>
</CustomField>