force-app/main/default/objects/Order/fields/Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pressure__c</fullName>
    <label>Pressione Fornitura</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>