force-app/main/default/objects/Order/fields/PressureLevel__c.field-meta.xml
<CustomField>
    <fullName>PressureLevel__c</fullName>
    <label>Livello pressione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_PressureLevel</valueSetName>
    </valueSet>
</CustomField>