force-app/main/default/objects/Order/fields/PreviousCustomer__c.field-meta.xml
<CustomField>
    <fullName>PreviousCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo che traccia il cliente precedente</description>
    <label>Cliente uscente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Cliente uscente)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>