force-app/main/default/objects/Order/fields/PreviousHoldeCompanyName__c.field-meta.xml
<CustomField>
    <fullName>PreviousHoldeCompanyName__c</fullName>
    <label>Ragione sociale precedente intestatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>