force-app/main/default/objects/Order/fields/PreviousHolderFirstName__c.field-meta.xml
<CustomField>
    <fullName>PreviousHolderFirstName__c</fullName>
    <label>Nome precedente intestatario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>