force-app/main/default/objects/Order/fields/PreviousHolderFiscalCode__c.field-meta.xml
<CustomField>
    <fullName>PreviousHolderFiscalCode__c</fullName>
    <label>C.F. Precdente intestatario</label>
    <length>16</length>
    <type>Text</type>
</CustomField>