force-app/main/default/objects/Order/fields/PreviousHolderLastName__c.field-meta.xml
<CustomField>
    <fullName>PreviousHolderLastName__c</fullName>
    <label>Cognome precedente intestatario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>