force-app/main/default/objects/Order/fields/PreviousHolderVatNumber__c.field-meta.xml
<CustomField>
    <fullName>PreviousHolderVatNumber__c</fullName>
    <label>P.Iva precedente intestatario</label>
    <length>11</length>
    <type>Text</type>
</CustomField>