force-app/main/default/objects/Order/fields/PreviousPhase__c.field-meta.xml
<CustomField>
    <fullName>PreviousPhase__c</fullName>
    <description>Campo per salvare la fase e ripristinarla in caso di KO all&apos;annullamento</description>
    <label>Fase Antecedente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>