force-app/main/default/objects/Order/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priorità</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Media</label>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>Bassa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>