force-app/main/default/objects/Order/fields/ProcessCode__c.field-meta.xml
<CustomField>
    <fullName>ProcessCode__c</fullName>
    <label>Codice Processo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>