force-app/main/default/objects/Order/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Sottoprocesso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OrderProcess</valueSetName>
    </valueSet>
</CustomField>