force-app/main/default/objects/Order/fields/ProfilingPrivacy__c.field-meta.xml
<CustomField>
    <fullName>ProfilingPrivacy__c</fullName>
    <label>Consenso Alla Profilazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>