force-app/main/default/objects/Order/fields/QualityCall__c.field-meta.xml
<CustomField>
    <fullName>QualityCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality call</label>
    <type>Checkbox</type>
</CustomField>