force-app/main/default/objects/Order/fields/QualityCallUnique__c.field-meta.xml
<CustomField>
    <fullName>QualityCallUnique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unica quality call per tutti gli ordini legati al dossier</description>
    <label>Quality Call Unica</label>
    <type>Checkbox</type>
</CustomField>