force-app/main/default/objects/Order/fields/QuickQuote__c.field-meta.xml
<CustomField>
    <fullName>QuickQuote__c</fullName>
    <label>Preventivo Rapido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DocuementValidation</valueSetName>
    </valueSet>
</CustomField>