force-app/main/default/objects/Order/fields/QuotationNumber__c.field-meta.xml
<CustomField>
    <fullName>QuotationNumber__c</fullName>
    <label>Numero Preventivo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>