force-app/main/default/objects/Order/fields/QuotationType__c.field-meta.xml
<CustomField>
    <fullName>QuotationType__c</fullName>
    <label>Tipo Preventivo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>