force-app/main/default/objects/Order/fields/RateCategory__c.field-meta.xml
<CustomField>
    <fullName>RateCategory__c</fullName>
    <label>RateCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>