force-app/main/default/objects/Order/fields/ReadingCustomerDate__c.field-meta.xml
<CustomField>
    <fullName>ReadingCustomerDate__c</fullName>
    <label>Data Lettura Cliente</label>
    <type>Date</type>
</CustomField>