force-app/main/default/objects/Order/fields/ReadingSerialNumberCorrector__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumberCorrector__c</fullName>
    <label>Matricola Correttore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>