force-app/main/default/objects/Order/fields/ReadingValueMeter__c.field-meta.xml
<CustomField>
    <fullName>ReadingValueMeter__c</fullName>
    <label>Lettura Misuratore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>