force-app/main/default/objects/Order/fields/ReasonDL__c.field-meta.xml
<CustomField>
    <fullName>ReasonDL__c</fullName>
    <label>Causale DL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>