force-app/main/default/objects/Order/fields/RecessNotice__c.field-meta.xml
<CustomField>
    <fullName>RecessNotice__c</fullName>
    <label>Mesi Preavviso recesso</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>