force-app/main/default/objects/Order/fields/RegionalAdditional__c.field-meta.xml
<CustomField>
    <fullName>RegionalAdditional__c</fullName>
    <label>Addizionale Regionale</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>