force-app/main/default/objects/Order/fields/RelatedPractice__c.field-meta.xml
<CustomField>
    <fullName>RelatedPractice__c</fullName>
    <label>Pratica Correlata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>