force-app/main/default/objects/Order/fields/RemiCode__c.field-meta.xml
<CustomField>
    <fullName>RemiCode__c</fullName>
    <label>Codice REMI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>