force-app/main/default/objects/Order/fields/ReminderComfortCall__c.field-meta.xml
<CustomField>
    <fullName>ReminderComfortCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Comfort Call</label>
    <type>Checkbox</type>
</CustomField>