force-app/main/default/objects/Order/fields/RequestOption__c.field-meta.xml
<CustomField>
    <fullName>RequestOption__c</fullName>
    <description>UNB_OPZIONE(Lov Siebel che verra ceensita su CMD e poi riportata la scelta sul campo)</description>
    <label>Opzione Richiesta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>