force-app/main/default/objects/Order/fields/RequestPhase__c.field-meta.xml
<CustomField>
    <fullName>RequestPhase__c</fullName>
    <label>Fase Richiesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_PhaseType</valueSetName>
    </valueSet>
</CustomField>