force-app/main/default/objects/Order/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Residente</description>
    <label>Residente</label>
    <type>Checkbox</type>
</CustomField>