force-app/main/default/objects/Order/fields/ResidentialCity__c.field-meta.xml
<CustomField>
    <fullName>ResidentialCity__c</fullName>
    <label>Comune [Residenziale/Sede Legale]</label>
    <length>40</length>
    <type>Text</type>
</CustomField>