force-app/main/default/objects/Order/fields/ResidentialCountry__c.field-meta.xml
<CustomField>
    <fullName>ResidentialCountry__c</fullName>
    <label>Stato [Residenziale/Sede Legale]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>