force-app/main/default/objects/Order/fields/ResidentialIsAddressVerified__c.field-meta.xml
<CustomField>
    <fullName>ResidentialIsAddressVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo Verificato [Residenziale/Sede</label>
    <type>Checkbox</type>
</CustomField>