force-app/main/default/objects/Order/fields/ResidentialPlace__c.field-meta.xml
<CustomField>
    <fullName>ResidentialPlace__c</fullName>
    <label>Località [Residenziale/Sede Legale]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>