force-app/main/default/objects/Order/fields/ResidentialPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ResidentialPostalCode__c</fullName>
    <label>CAP [Residenziale/Sede Legale]</label>
    <length>20</length>
    <type>Text</type>
</CustomField>