force-app/main/default/objects/Order/fields/ResidentialState__c.field-meta.xml
<CustomField>
    <fullName>ResidentialState__c</fullName>
    <label>Provincia [Residenziale/Sede Legale]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>