force-app/main/default/objects/Order/fields/ResidentialStreet__c.field-meta.xml
<CustomField>
    <fullName>ResidentialStreet__c</fullName>
    <label>Via [Residenziale/Sede Legale]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>