force-app/main/default/objects/Order/fields/ResidentialStreetName__c.field-meta.xml
<CustomField>
    <fullName>ResidentialStreetName__c</fullName>
    <description>Contiene Toponimo e Nome via</description>
    <label>Nome Via [Residenziale/Sede Legale]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>