force-app/main/default/objects/Order/fields/ResidentialStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>ResidentialStreetNumber__c</fullName>
    <label>Civico [Residenziale/Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>