force-app/main/default/objects/Order/fields/ResidentialStreetNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>ResidentialStreetNumberExtension__c</fullName>
    <label>Estens. Civ. [Residenziale/Sede Legale]</label>
    <length>15</length>
    <type>Text</type>
</CustomField>