force-app/main/default/objects/Order/fields/RetroactiveDate__c.field-meta.xml
<CustomField>
    <fullName>RetroactiveDate__c</fullName>
    <description>Data che se valorizzata determina che il tipo di Voltura è retroattiva</description>
    <label>Data Retroattiva</label>
    <type>Date</type>
</CustomField>