force-app/main/default/objects/Order/fields/Revoke__c.field-meta.xml
<CustomField>
    <fullName>Revoke__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Campo specifiche tecniche SII</description>
    <label>Revoca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>