force-app/main/default/objects/Order/fields/RevokedCancellation__c.field-meta.xml
<CustomField>
    <fullName>RevokedCancellation__c</fullName>
    <description>Campo che indica se l&apos;annullamento sia stato revocato</description>
    <label>Annullamento/Ripensamento Revocato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>