force-app/main/default/objects/Order/fields/RipensamentoVas__c.field-meta.xml
<CustomField>
    <fullName>RipensamentoVas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ripensamento Vas</label>
    <type>Checkbox</type>
</CustomField>