force-app/main/default/objects/Order/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Ruolo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>