force-app/main/default/objects/Order/fields/RonchiSubcat__c.field-meta.xml
<CustomField>
    <fullName>RonchiSubcat__c</fullName>
    <label>Sottocategoria Ronchi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>