force-app/main/default/objects/Order/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendita</label>
    <referenceTo>Sale__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>