force-app/main/default/objects/Order/fields/SaleBy__c.field-meta.xml
<CustomField>
    <fullName>SaleBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Vendita</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>