force-app/main/default/objects/Order/fields/SalesCompany__c.field-meta.xml
<CustomField>
    <fullName>SalesCompany__c</fullName>
    <label>Società di vendita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hera Comm Marche</fullName>
            </value>
            <value>
                <fullName>Acegas Aps Service</fullName>
            </value>
            <value>
                <fullName>Hera Comm NordEst</fullName>
            </value>
            <value>
                <fullName>Hera Comm S.p.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>