force-app/main/default/objects/Order/fields/SalesCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SalesCompanyCode__c</fullName>
    <label>Codice Società di vendita</label>
    <length>50</length>
    <type>Text</type>
</CustomField>