force-app/main/default/objects/Order/fields/SalesContact__c.field-meta.xml
<CustomField>
    <fullName>SalesContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contatto Vendita</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Contatto Vendita)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>