force-app/main/default/objects/Order/fields/SalesContactRole__c.field-meta.xml
<CustomField>
    <fullName>SalesContactRole__c</fullName>
    <label>Ruolo contrattuale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>