force-app/main/default/objects/Order/fields/SapContractActivationDate__c.field-meta.xml
<CustomField>
    <fullName>SapContractActivationDate__c</fullName>
    <label>Data Attivazione Contratto SAP</label>
    <type>Date</type>
</CustomField>