force-app/main/default/objects/Order/fields/SapContractCode__c.field-meta.xml
<CustomField>
    <fullName>SapContractCode__c</fullName>
    <label>Codice Contratto SAP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>