force-app/main/default/objects/Order/fields/SAPImplantCode__c.field-meta.xml
<CustomField>
    <fullName>SAPImplantCode__c</fullName>
    <label>Impianto SAP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>