force-app/main/default/objects/Order/fields/SecurityDepositExcluded__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositExcluded__c</fullName>
    <label>Esclusione deposito cauzionale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YN</valueSetName>
    </valueSet>
</CustomField>