force-app/main/default/objects/Order/fields/SendCertifiedEmailConsentDate__c.field-meta.xml
<CustomField>
    <fullName>SendCertifiedEmailConsentDate__c</fullName>
    <label>Data consenso E-mail PEC Invio Bolletta</label>
    <type>Date</type>
</CustomField>