force-app/main/default/objects/Order/fields/SendRequestDate__c.field-meta.xml
<CustomField>
    <fullName>SendRequestDate__c</fullName>
    <description>Data dell&apos;invio verso i sistemi a valle per l&apos;accettazione/rifiuto della voltura</description>
    <label>Data Invio Richiesta</label>
    <type>Date</type>
</CustomField>