force-app/main/default/objects/Order/fields/ServiceCost__c.field-meta.xml
<CustomField>
    <fullName>ServiceCost__c</fullName>
    <label>Costo Prestazione</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>